--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ZiadaLite || Dashboard</title>
 
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+    integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+
   <!-- ui  -->
+  <link rel="stylesheet" href="/libs/datatables/datatables.min.css">
   <link rel="stylesheet" href="./libs/remixicons/remixicon.css">
   <link rel="stylesheet" href="./libs/ui-icon/icon.min.css">
   <link rel="stylesheet" href="./libs/ui-input/input.min.css">
@@ -15,8 +19,7 @@
   <link rel="stylesheet" href="./libs/ui-table/table.min.css">
   <link rel="stylesheet" href="./libs/ui-grid/grid.min.css">
   <link rel="stylesheet" href="./libs/ui-form/form.min.css">
-
-
+  <link rel="stylesheet" href="./libs/ui-checkbox/checkbox.min.css">
 
 
   <!-- ui  -->
@@ -27,6 +30,9 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+  <script src="/libs/datatables/datatables.min.js"></script>
+
+
 </body>
 
 </html>
